# coco-led-strip

./: CMakeLists.txt  conanfile.py
coco/: CMakeLists.txt
coco/emu/coco/platform/: GuiLedStrip.cpp  GuiLedStrip.hpp  LedStrip_emu.cpp  LedStrip_emu.hpp
coco/native/coco/platform/: LedStrip_cout.cpp  LedStrip_cout.hpp
coco/nrf52/coco/platform/: LedStrip_I2S.cpp  LedStrip_I2S.hpp
coco/stm32/coco/platform/: LedStrip_UART_DMA.cpp  LedStrip_UART_DMA.hpp  bitTable_UART.hpp
generator/: main.cpp
test/: CMakeLists.txt  LedStripTest.cpp
test/LedControl-g431/: LedStripTest.hpp  SystemInit.cpp  config.hpp  debug.cpp  link.ld
test/nrf52dongle/: LedStripTest.hpp
test/nucleo-c031c6/: LedStripTest.hpp
test/nucleo-g431rb/: LedStripTest.hpp
test/nucleo-g474re/: LedStripTest.hpp
test/nucleo-h503rb/: LedStripTest.hpp
test/stm32f3348discovery/: LedStripTest.hpp
